# cubes

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  camera.cpp  camera.h  chunk.cpp  chunk.h  chunk_constants.h  chunk_draw.h  coords.h  cube.cpp  cube.h  debug.cpp  debug.h  ebo.cpp  ebo.h  font.cpp  font.h  frustum.cpp  frustum.h  main.cpp  mesh.h  mesher.cpp  mesher.h  renderer.cpp  renderer.h  shader.cpp  shader.h  state.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h  vcpkg.json  window.cpp  window.h  (+2 more)
shaders/: cubeFragment.glsl  cubeVertex.glsl  floorFragment.glsl  floorVertex.glsl  fragment.glsl  quadFragment.glsl  quadVertex.glsl  textFragment.glsl  textVertex.glsl  vertex.glsl
tests/: coords_tests.cpp
